[package]
name = "v1"
version = "0.1.0"
authors = ["lanshibao"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio={version="0.2.6",features=["full"]}
anyhow = "1.0.22"
tracing = "0.1.13"
tracing-subscriber = { version = "0.2.3", default-features = false, features = ["env-filter", "fmt", "ansi", "chrono"]}
tracing-futures = { version = "0.2.0", default-features = false, features = ["std-future"] }
byteorder = "1.3.4"
redis = "0.16.0"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.4", features = ["postgres", "serde_json", "chrono", "r2d2"] }
dotenv = "0.15.0"
guid-create = "0.1.1"
murmur3 = "0.5.1"
flate2 = {version="1.0.14",features = ["tokio"]}
cityhash = "0.1.1"
futures = "0.3.1"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
function_name = "0.2.0"